Homepage audio list not showing up bug fixed, audios not playing due to fetch request payload bug descoverd and will be fixed next.

--- a/src/js/comp/css/audioplayer.css
+++ b/src/js/comp/css/audioplayer.css
@@ -60,21 +60,23 @@
       height: 100%;
       justify-content: center;
       overflow: hidden;
-    }
 
-    .ap-div-info {
-    .artist {
-      font-size: 1.4rem;
+      .artist {
+        font-size: 1.4rem;
+        text-wrap: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+  
+      .name {
+        display: inline-block;
+        font-size: 1.267rem;
+        max-height: 12.67px;
+        text-wrap: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
     }
-
-    .name {
-      display: inline-block;
-      font-size: 1.267rem;
-      max-height: 12.67px;
-      overflow: hidden;
-    }
-    }
-
     /* @keyframes slideRigtInfinite {
     from {
       transform: translateX(100%);
@@ -102,7 +104,7 @@
       width: 10.67px;
     }
     p {
-      margin-top: unset;
+      margin-top: 2px;
       font-size: 10.67px;
     }
     }
