--- a/src/js/comp/css/audiouploader.css
+++ b/src/js/comp/css/audiouploader.css
@@ -56,7 +56,7 @@
 .div-inputwrap {
   display: flex;
   flex-direction: column;
-  gap: 6px;
+  gap: 10px;
   width: 100%;
   max-width: 295px;
 }
